auto-test/tests/chapter_18/invalid_types/extra_credit/other_features/compound_assign_to_struct.c

struct s { int i; };
int main(void) {
    struct s x = {10};
    x += 10;
    return 0;
}